k8s/workloads/loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: monitoring
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - loki.robodatalab.com
      secretName: robodatalab-wildcard-tls
  rules:
    - host: loki.robodatalab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
